Fix: Add text align center to Exclusive css

--- a/src/component/Exclusive/Exclusive.css
+++ b/src/component/Exclusive/Exclusive.css
@@ -1,3 +1,7 @@
+.Exclusive {
+  text-align: center;
+}
+
 .Exclusive h2 {
   margin-block: 0 16px;
   font-size: 26px;
